--- a/cv/angular.json
+++ b/cv/angular.json
@@ -25,11 +25,16 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": [],
-            "allowedCommonJsDependencies": ["lodash",  "rxjs-compat", "html2canvas", "jspdf"]
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "rxjs-compat",
+              "html2canvas",
+              "jspdf"
+            ]
           },
           "configurations": {
             "production": {
@@ -81,7 +86,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
