--- a/cv/package.json
+++ b/cv/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.1",
     "jspdf": "^2.5.1",
     "rxjs": "~7.8.0",
+    "shade-blend-color": "^1.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -34,6 +35,7 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/shade-blend-color": "^1.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
