--- a/cv/package.json
+++ b/cv/package.json
@@ -1,6 +1,10 @@
 {
   "name": "cv",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20.10.0",
+    "npm": ">=10.1.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,12 +27,13 @@
     "@angular/router": "^17.0.7",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@types/lodash": "^4.14.202",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.3.1",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "rgbcolor": "^1.0.1",
     "rxjs": "~7.8.0",
-    "shade-blend-color": "^1.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -37,7 +42,7 @@
     "@angular/cli": "~17.0.7",
     "@angular/compiler-cli": "^17.0.7",
     "@types/jasmine": "~4.3.0",
-    "@types/shade-blend-color": "^1.0.0",
+    "@types/node": "^20.11.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
