New background theme -in progress

--- a/cv/angular.json
+++ b/cv/angular.json
@@ -36,7 +36,8 @@
               "jspdf",
               "core-js",
               "raf",
-              "rgbcolor"
+              "rgbcolor",
+              "dompurify"
             ]
           },
           "configurations": {
