--- a/cv/package.json
+++ b/cv/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^17.0.7",
     "@angular/platform-browser-dynamic": "^17.0.7",
     "@angular/router": "^17.0.7",
+    "@ngneat/until-destroy": "^10.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/lodash": "^4.14.202",
@@ -42,7 +43,7 @@
     "@angular/cli": "~17.0.7",
     "@angular/compiler-cli": "^17.0.7",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^20.11.7",
+    "@types/node": "^20.11.24",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
