--- a/cv/package.json
+++ b/cv/package.json
@@ -31,8 +31,8 @@
     "@types/lodash": "^4.14.202",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.3.1",
-    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "pdfmake": "^0.3.0",
     "rgbcolor": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -44,6 +44,7 @@
     "@angular/compiler-cli": "^17.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.11.24",
+    "@types/pdfmake": "^0.2.12",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
